--- a/functions/package.json
+++ b/functions/package.json
@@ -1,15 +1,17 @@
 {
   "name": "functions",
   "scripts": {
-    "build": "tsc",
+    "lint": "eslint 'src/**/*.{js,ts}'",
+    "build": "npm run lint && tsc",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
+    "test": "jest",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "main": "lib/index.js",
   "dependencies": {
@@ -17,8 +19,29 @@
     "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
-    "typescript": "^3.2.2",
-    "firebase-functions-test": "^0.1.6"
+    "@types/eslint": "^6.1.3",
+    "@types/jest": "^24.0.25",
+    "@types/prettier": "^1.19.0",
+    "@typescript-eslint/eslint-plugin": "^2.15.0",
+    "@typescript-eslint/parser": "^2.15.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-prefer-arrow": "^1.1.7",
+    "firebase-functions-test": "^0.1.6",
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1",
+    "ts-jest": "^24.3.0",
+    "typescript": "^3.2.2"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "ts-jest",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts?|js?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "json",
+      "js"
+    ]
+  }
 }
