--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,12 +1,16 @@
 {
   "compilerOptions": {
+    "esModuleInterop": true,
+    "lib": ["dom", "ensext"],
     "module": "commonjs",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "outDir": "lib",
+    "resolveJsonModule": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "types": ["jest", "node"]
   },
   "compileOnSave": true,
   "include": [
