--- a/functions/package.json
+++ b/functions/package.json
@@ -15,12 +15,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "commander": "^4.1.0",
+    "csv-parse": "^4.8.5",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
     "@types/eslint": "^6.1.3",
     "@types/jest": "^24.0.25",
+    "@types/node": "^13.1.8",
     "@types/prettier": "^1.19.0",
     "@typescript-eslint/eslint-plugin": "^2.15.0",
     "@typescript-eslint/parser": "^2.15.0",
