--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "commander": "^4.1.0",
     "csv-parse": "^4.8.5",
+    "firebase": "^7.7.0",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0"
   },
