--- a/functions/package.json
+++ b/functions/package.json
@@ -1,42 +1,49 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "eslint 'src/**/*.{js,ts}'",
     "build": "npm run lint && tsc",
+    "dbreset": "firebase firestore:delete --all-collections",
+    "dbreset:publishers": "firebase firestore:delete -y --shallow publishers",
+    "dbseed": "npm run dbseed:publishers",
+    "dbseed:publishers": "node lib/commands/dbseed.js publishers seeds/publishers.tsv",
+    "lint": "eslint 'src/**/*.{js,ts}'",
+    "lint:fix": "eslint --fix 'src/**/*.{js,ts}'",
+    "logs": "firebase functions:log",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "test": "jest",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "test": "jest"
   },
   "engines": {
     "node": "10"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "commander": "^4.1.0",
-    "csv-parse": "^4.8.5",
-    "firebase": "^7.7.0",
-    "firebase-admin": "^8.6.0",
+    "commander": "^4.0.1",
+    "csv-parse": "^4.8.2",
+    "firebase": "^7.6.0",
+    "firebase-admin": "^8.8.0",
     "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
     "@types/eslint": "^6.1.3",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^13.1.8",
+    "@types/eslint-plugin-prettier": "^2.2.0",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.17",
     "@types/prettier": "^1.19.0",
-    "@typescript-eslint/eslint-plugin": "^2.15.0",
-    "@typescript-eslint/parser": "^2.15.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-jest": "^23.6.0",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-prefer-arrow": "^1.1.7",
-    "firebase-functions-test": "^0.1.6",
+    "eslint-plugin-prettier": "^3.1.1",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
-    "ts-jest": "^24.3.0",
-    "typescript": "^3.2.2"
+    "ts-jest": "^24.2.0",
+    "typescript": "3.7.3"
   },
   "private": true,
   "jest": {
