--- a/functions/package.json
+++ b/functions/package.json
@@ -21,16 +21,24 @@
   "dependencies": {
     "commander": "^4.0.1",
     "csv-parse": "^4.8.2",
+    "date-fns": "^2.9.0",
+    "date-fns-timezone": "^0.1.4",
     "firebase": "^7.6.0",
     "firebase-admin": "^8.8.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "lodash": "^4.17.15",
+    "node-fetch": "^2.6.0",
+    "puppeteer": "^2.0.0"
   },
   "devDependencies": {
     "@types/eslint": "^6.1.3",
     "@types/eslint-plugin-prettier": "^2.2.0",
     "@types/jest": "^24.0.23",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.17",
+    "@types/node-fetch": "^2.5.4",
     "@types/prettier": "^1.19.0",
+    "@types/puppeteer": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "eslint": "^6.7.2",
